--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Zhao Lu
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  My teaching portfolio.
+baseurl: ""
+url: "https://teach.zlu.me" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: zlu
+github_username:  zlu
 
 # Build settings
-theme: minima
 plugins:
   - jekyll-feed
+
+languages: ["en", "zh"]
+default_lang: "en"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
