--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Zhao Lu
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  My teaching portfolio.
+  Progmatism, broad perspective
 baseurl: ""
 url: "https://teach.zlu.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zlu
