--- a/_config.yml
+++ b/_config.yml
@@ -18,18 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Zhao Lu
-email: your-email@example.com
+title: Teach @ zlu.me
 description: >- # this means to ignore newlines until "baseurl:"
   Progmatism, broad perspective
 baseurl: ""
 url: "https://teach.zlu.me" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: zlu
+twitter:
+  username: zlu
 github_username:  zlu
 
 # Build settings
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  
 
 languages: ["en", "zh"]
 default_lang: "en"
